# TinyCompiler

./: LICENSE  README.md
Compiler/: CMakeLists.txt
Compiler/Src/: TinyCompilerOpt.cpp
Compiler/includes/: TinyFusionDialect.td
Compiler/includes/Dialect/: CMakeLists.txt  Passes.h  TinyFusionCApi.h  TinyFusionDialect.cpp.inc  TinyFusionDialect.h  TinyFusionDialect.h.inc  TinyFusionDialect.td  TinyFusionOps.cpp.inc  TinyFusionOps.h  TinyFusionOps.h.inc  TinyFusionOps.td
Compiler/python/: CMakeLists.txt  TinyFusionExtension.cpp
Compiler/python/mlir/dialects/: TinyFusion.py  TinyFusion.td
Compiler/src/: AffineAnalysis.cpp  CMakeLists.txt  LowerToAffine.cpp  LowerToTinyFusion.cpp  LowingToTinyFusion.cpp  TinyFusionCApi.cpp  TinyFusionDialect.cpp
Compiler/tools/: CMakeLists.txt  TinyCompiler-Opt.cpp  TinyCompiler.cpp
FrontEnd/: Torch.py  aot.py  tinycompile.py
MidEnd/src/: TinyCompiler-Opt.cpp
Test/: Conv2dLRelu.mlir  Conv2dSilu.mlir  affineConv2dRelu.mlir  sample.mlir  simple.mlir
